Fix layout issues

--- a/pages/scss/popup-window.scss
+++ b/pages/scss/popup-window.scss
@@ -19,7 +19,6 @@
   .pop-up-container {
     padding: 0 50px;
     display: flex;
-    align-items: center;
   }
   .close-icon-wrapper {
     display: flex;
@@ -75,7 +74,7 @@
         width: 100%;
         max-width: 205px;
         cursor: pointer;
-        .active {
+        &.active {
           border: 1px solid #fe8732;
         }
         .bank-name {
@@ -204,4 +203,11 @@
       }
     }
   }
+}
+
+.b-custom-checkbox {
+  margin-bottom: 0;
+  padding: 0;
+  min-height: auto;
+  line-height: initial;
 }
